# fermat

./: .gitignore  BROC  CMakeLists.txt  ci.yml  local_build.sh  tags
btests/: StringTest.h  benchmark_test.cc
cmake/: CheckCompiler.cmake
gtests/: gtest.cc
include/fermat/common/: basic_buffer.h  cmdline.h  cond.h  env.h  format.h  format_in.h  log_async.h  log_stream.h  logging.h  numeric_formatter.h  numeric_parser.h  runnable.h  shared_state.h  stack_buffer.h  stop_watcher.h  string.h  string_ref.h  timespan.h
src/: CMakeLists.txt
src/fermat/common/: .ascii.cc.swp  .ascii.h.swp  .clock.h.swp  ascii.cc  ascii.h  basic_buffer.h  clock.cc  clock.h  cond.cc  env.cc  log_async.cc  log_async.h  log_file.cc  log_file.h  log_multi_async.cc  log_multi_async.h  log_stream.cc  log_stream.h  logging.cc  mutex.cc  mutex.h  numeric_formatter.cc  numeric_parser.cc  numeric_string.cc  numeric_string.h  runnable.cc  sequence_write_file.cc  sequence_write_file.h  shared_state.h  singleton.h  stack_buffer.h  stop_wathcer.cc  this_thread.cc  this_thread.h  thread.cc  thread.h  timespan.cc  timestamp.cc  timestamp.h
tests/common/: CMakeLists.txt  cmdline_test.cc  log_test.cc
